_sass/_style.scss
/* ... */
@keyframes sk-circleBounceDelay {
  0%, 100%, 80% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }

  40% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}


@-webkit-keyframes sk-cubeGridScaleDelay {
  0%, 100%, 70% {
    -webkit-transform: scale3D(1, 1, 1);
    transform: scale3D(1, 1, 1);
  }

  35% {
    -webkit-transform: scale3D(0, 0, 1);
    transform: scale3D(0, 0, 1);
  }
}


@keyframes sk-cubeGridScaleDelay {
  0%, 100%, 70% {
    -webkit-transform: scale3D(1, 1, 1);
    transform: scale3D(1, 1, 1);
  }

  35% {
    -webkit-transform: scale3D(0, 0, 1);
    transform: scale3D(0, 0, 1);
  }
}


@-webkit-keyframes sk-innerCircle {
  0% {
    -webkit-transform: rotate(0);
    transform: rotate(0);
  }

  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}


@keyframes sk-innerCircle {
  0% {
    -webkit-transform: rotate(0);
    transform: rotate(0);
  }

  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}


@-webkit-keyframes sk-circleFadeDelay {
  0%, 100%, 39% {
    opacity: 0;
  }

  40% {
    opacity: 1;
  }
}


@keyframes sk-circleFadeDelay {
  0%, 100%, 39% {
    opacity: 0;
  }

  40% {
    opacity: 1;
  }
}

.landing-page {
  .caption-link {
    color: $white;
    margin-left: 10px;
    text-transform: capitalize;
    font-weight: 400;
    &:hover {
      text-decoration: none;
      color: inherit;
    }
  }
  .features-block, .features-text {
    margin-top: 40px;
  }
  .features {
    small {
      color: $link-color;
    }
    h2 {
      font-size: 18px;
      margin-top: 5px;
    }
  }
  .features-icon {
    color: $link-color;
    font-size: 40px;
  }
  .navy-section {
    margin-top: 60px;
    background: $link-color;
    color: $white;
    padding: 20px 0;
  }
  .gray-section {
    background: #f4f4f4;
  }
  .team-member {
    img {
      margin: auto;
    }
  }
  .social-icon a {
    background: $link-color;
    color: $white;
    padding-top: 5px;
    height: 30px;
    width: 30px;
    display: block;
    border-radius: 50px;
    font-size: 0.85rem;
    &:hover {
      background: $link-color;
    }
  }
  .img-small {
    height: 88px;
    width: 88px;
  }
  .btn-primary {
    font-weight: 600;
    font-size: 14px;
  }
  .testimonials {
    background-color: $link-color;
    background-image: url(../assets/img/landing/avatar_all.png);
  }
  section {
    &.timeline {
      padding-bottom: 30px;
    }
    &.comments {
      padding-bottom: 80px;
    }
  }
  .comments-avatar {
    margin-top: 25px;
    margin-left: 22px;
    img {
      width: 42px;
      height: 42px;
      border-radius: 50%;
      margin-right: 10px;
    }
  }
  .btn-info.btn-outline:hover, .btn-primary.btn-outline:hover, .btn-success.btn-outline:hover, .btn-warning.btn-outline:hover {
    color: $white;
  }
  .btn-primary {
    background-color: $link-color;
    border-color: $link-color;
    color: $white;
    &.active, &:active, &:focus, &:hover {
      background-color: $link-color;
      border-color: $link-color;
      color: $white;
    }
    padding: 10px 20px;
    &.active, &:active {
      background-image: none;
    }
    &.active, &:disabled {
      background-color: #1dc5a3;
      border-color: #1dc5a3;
    }
    &:disabled {
      background-color: #1dc5a3;
      border-color: #1dc5a3;
      &:active, &:focus, &:hover {
        background-color: #1dc5a3;
        border-color: #1dc5a3;
      }
    }
  }
}

div#avatar {
  margin-bottom: 0.9rem;
}

.list-inline-item {
  padding: 5px;
  text-align: center;
}

// Fix Google Chrome audit "Ensure text remains visible during webfont load"
@font-face {
  font-family: 'Font Awesome 5 Brands';
  font-style: normal;
  font-weight: 400;
  font-display:swap;src: url(../assets/webfonts/fa-brands-400.eot);
  src: url(../assets/webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(../assets/webfonts/fa-brands-400.woff2) format("woff2"),url(../assets/webfonts/fa-brands-400.woff) format("woff"),url(../assets/webfonts/fa-brands-400.ttf) format("truetype"),url(../assets/webfonts/fa-brands-400.svg#fontawesome) format("svg")
}

// Fix Google Chrome audit "Ensure text remains visible during webfont load"
@font-face {
  font-family: 'Font Awesome 5 Free';
  font-style: normal;
  font-weight: 400;
  font-display:swap;src: url(../assets/webfonts/fa-regular-400.eot);
  src: url(../assets/webfonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(../assets/webfonts/fa-regular-400.woff2) format("woff2"),url(../assets/webfonts/fa-regular-400.woff) format("woff"),url(../assets/webfonts/fa-regular-400.ttf) format("truetype"),url(../assets/webfonts/fa-regular-400.svg#fontawesome) format("svg")
}

// Fix Google Chrome audit "Ensure text remains visible during webfont load"
@font-face {
  font-family: 'Font Awesome 5 Free';
  font-style: normal;
  font-weight: 900;
  font-display:swap;src: url(../assets/webfonts/fa-solid-900.eot);
  src: url(../assets/webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),url(../assets/webfonts/fa-solid-900.woff2) format("woff2"),url(../assets/webfonts/fa-solid-900.woff) format("woff"),url(../assets/webfonts/fa-solid-900.ttf) format("truetype"),url(../assets/webfonts/fa-solid-900.svg#fontawesome) format("svg")
}

